feat:adding-triggered-read-enum

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -3530,6 +3530,7 @@ paths:
               - "installation.updated"
               - "installation.deleted"
               - "read.schedule.paused"
+              - "read.triggered.done"
               - "destination.webhook.disabled"
       responses:
         200:
