--- a/api/write.yaml
+++ b/api/write.yaml
@@ -91,7 +91,7 @@ components:
           example: synchronous
         retryPolicy:
           type: object
-          description: The retry policy for an asynchronous write operation.
+          description: The retry policy for an asynchronous write operation. Ignored when autoBatchPolicy is specified.
           properties:
             deadlineHours:
               type: integer
@@ -100,6 +100,32 @@ components:
               default: 1
               minimum: 1
               maximum: 48
+        autoBatchPolicy:
+          type: object
+          description: |
+            The auto-batch policy for asynchronous single-record write operations. When enabled, multiple single-record 
+            write requests are automatically grouped together and executed as a batch. The batch executes when either 
+            100 records accumulate or the maximum delay time expires. Only available for asynchronous mode and single-record writes.
+          properties:
+            maxDelayMinutes:
+              type: integer
+              description: |
+                The maximum time to wait before executing the batch, even if it hasn't reached 100 records. 
+                Once this time expires, the batch will be executed even if it hasn't reached the limit.
+              example: 5
+              minimum: 1
+              maximum: 1440
+            retryDeadlineHours:
+              type: integer
+              description: |
+                The maximum time to keep retrying the batch write operation if it fails. 
+                If not specified, defaults to 1 hour.
+              example: 2
+              default: 1
+              minimum: 1
+              maximum: 48
+          required:
+            - maxDelayMinutes
         record:
           type: object
           description: "The record to write. Use this for single record mode. Exactly one of 'record' or 'batch' must be provided."
