updating triggered reads faliure names

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -5852,7 +5852,7 @@ components:
         - "read.schedule.paused"
         - "read.backfill.done"
         - "read.triggered.done"
-        - "read.triggered.failed"
+        - "read.triggered.error"
         - "destination.webhook.disabled"
     TopicDestinationRoute:
       title: Topic Destination Route
