--- a/api/write.yaml
+++ b/api/write.yaml
@@ -8,7 +8,7 @@ paths:
   /projects/{projectIdOrName}/integrations/{integrationId}/objects/{objectName}:
     post:
       summary: Write records
-      description: Create or update records in a SaaS instance, synchronously or asynchronously. See [Write actions](https://docs.withampersand.com/write-actions) for details.
+      description: Create, update, or delete records in a SaaS instance. Create and update support synchronous or asynchronous mode; delete is synchronous only. See [Write actions](https://docs.withampersand.com/write-actions) for details.
       operationId: writeRecords
       tags: ["Write"]
       parameters:
@@ -34,6 +34,73 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/WriteRequest"
+            examples:
+              single-create:
+                summary: Single record create
+                value:
+                  groupRef: "<groupRef>"
+                  type: create
+                  mode: synchronous
+                  record:
+                    email: david@withampersand.com
+                    warmthScore: ready-for-close
+              single-create-associations:
+                summary: Single create with associations (HubSpot)
+                value:
+                  groupRef: "<groupRef>"
+                  type: create
+                  mode: synchronous
+                  record:
+                    email: david@withampersand.com
+                    warmthScore: ready-for-close
+                  associations:
+                    - to:
+                        id: "18417469260"
+                      types:
+                        - associationCategory: HUBSPOT_DEFINED
+                          associationTypeId: 279
+              single-update:
+                summary: Single record update
+                value:
+                  groupRef: "<groupRef>"
+                  type: update
+                  mode: synchronous
+                  record:
+                    id: "003xx000001"
+                    email: david@withampersand.com
+                    warmthScore: ready-for-close
+              single-delete:
+                summary: Single record delete
+                value:
+                  groupRef: "<groupRef>"
+                  type: delete
+                  record:
+                    id: "003xx000001"
+              batch-create:
+                summary: Batch create
+                value:
+                  groupRef: "<groupRef>"
+                  type: create
+                  mode: synchronous
+                  batch:
+                    - record:
+                        email: david@withampersand.com
+                        warmthScore: ready-for-close
+                    - record:
+                        email: hermione@withampersand.com
+                        warmthScore: ready-for-close
+              auto-batch-create:
+                summary: Async create with auto-batch policy
+                value:
+                  groupRef: "<groupRef>"
+                  type: create
+                  mode: asynchronous
+                  autoBatchPolicy:
+                    maxDelayMinutes: 5
+                    retryDeadlineHours: 2
+                  record:
+                    email: david@withampersand.com
+                    warmthScore: ready-for-close
       responses:
         200:
           description: The success response
@@ -81,8 +148,8 @@ components:
         type:
           type: string
           description:
-            The type of write operation. The only supported types currently are create and update.
-          enum: [create, update]
+            The type of write operation. The only supported types currently are create, update, and delete.
+          enum: [create, update, delete]
           example: create
         mode:
           type: string
@@ -103,9 +170,8 @@ components:
         autoBatchPolicy:
           type: object
           description: |
-            The auto-batch policy for asynchronous single-record write operations. When enabled, multiple single-record 
-            write requests are automatically grouped together and executed as a batch. The batch executes when either 
-            100 records accumulate or the maximum delay time expires. Only available for asynchronous mode and single-record writes.
+            The auto-batch policy for asynchronous single-record write operations. When enabled, multiple single-record write requests are automatically grouped together and executed as a batch. The batch executes when either 100 records accumulate or the maximum delay time expires. 
+            Auto batching is currently only available for asynchronous mode and single-record writes.
           properties:
             maxDelayMinutes:
               type: integer
@@ -128,7 +194,9 @@ components:
             - maxDelayMinutes
         record:
           type: object
-          description: "The record to write. Use this for single record mode. Exactly one of 'record' or 'batch' must be provided."
+          description: |
+            The record to write. Use this when sending a single record. Omit this and use `batch` instead when sending multiple records in one request.
+            For create and update, include the record fields. For delete, only the record `id` is required; deletion must be enabled for this object in the installation config.
           additionalProperties: true
           example:
             {
@@ -137,7 +205,10 @@ components:
             }
         batch:
           type: array
-          description: "Multiple records to write (batch mode). Supports 1-100 records per batch. Partial writes are not supported. If any record in a batch is invalid, all records in the batch will fail. Exactly one of 'record' or 'batch' must be provided."
+          description: |
+            Write 1–100 records in one request. Omit this and use `record` instead when sending a single record.
+            Partial writes are not supported; if any record in the batch is invalid, the entire batch fails.
+            Batch is currently supported for create and update write requests.
           minItems: 1
           maxItems: 100
           items:
