--- a/.github/workflows/rdme-openapi-validate.yml
+++ b/.github/workflows/rdme-openapi-validate.yml
@@ -51,3 +51,13 @@ jobs:
         uses: readmeio/rdme@v8
         with:
           rdme: openapi:validate webhook.yaml --workingDirectory=webhook
+
+      - name: Validate notifications.yaml
+        uses: readmeio/rdme@v8
+        with:
+          rdme: openapi:validate notifications.yaml --workingDirectory=notifications
+
+      - name: Validate search.yaml
+        uses: readmeio/rdme@v8
+        with:
+          rdme: openapi:validate search.yaml --workingDirectory=api
