"nest backfill-progress under operation"

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1842,9 +1842,9 @@ paths:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
   /projects/{projectIdOrName}/integrations/{integrationId}/installations/{installationId}/objects/{objectName}/backfill-progress:
     get:
-      summary: Get backfill progress for an installation object
+      summary: Get backfill progress 
       operationId: getBackfillProgress
-      tags: ["Installation"]
+      tags: ["Operation"]
       description: Retrieve backfill progress (records processed, estimated total) for an object. Use to track progress of an initial data sync.
       parameters:
         - name: projectIdOrName
@@ -5148,7 +5148,6 @@ components:
           example: 2023-07-13T21:34:44.816354Z
     BackfillProgress:
       title: BackfillProgress
-      description: Tracks the progress of a backfill read operation for an object.
       type: object
       required:
         - installationId
