format true/false as inline code in allOrNone description

--- a/api/write.yaml
+++ b/api/write.yaml
@@ -252,8 +252,8 @@ components:
             allOrNone:
               type: boolean
               description: |
-                When set to true, the entire batch will fail if any record in the batch fails.
-                When set to false (default), partial writes are supported — successful records will be committed even if some fail.
+                When set to `true`, the entire batch will fail if any record in the batch fails.
+                When set to `false` (default), partial writes are supported — successful records will be committed even if some fail.
                 Note: HubSpot batch updates always result in partial success due to a provider limitation, regardless of this setting.
               default: false
               example: true
@@ -261,7 +261,7 @@ components:
           type: array
           description: |
             Write 1–100 records in one request. Omit this and use `record` instead when sending a single record.
-            Partial writes are not supported; if any record in the batch is invalid, the entire batch fails.
+            The default behavior is partial success, i.e., successful records will be committed even if some records in the batch fail. To disable partial writes and fail the entire batch, use the `allOrNone` flag in your request. See [`batchPolicy.allOrNone`](#/components/schemas/WriteRequest/properties/batchPolicy).
             Batch is currently supported for create and update write requests.
           minItems: 1
           maxItems: 100
